css/style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  }

body {
  font-family: arial;
  }

#menu-outer {
  height: 84px;
  background: url(images/bar-bg.jpg) repeat-x;
  }

#top {
  text-align: center;
  }
  
.table {
  display: table;   
  margin: 0 auto;
  }

#horizontal-list {
  min-width: 300px;
  list-style: none;
  padding-top: 20px;
  }

#horizontal-list li {
  display: inline;
  }
  
nav#horz1 #onpage {
  background-color: rgb(208, 226, 245);
  border-radius: 15px;
  color: #000;
  }

nav#horz1 ul {
  list-style-type: none;
  padding: 0;
  margin: 0;
  overflow: hidden
  }
  
nav#horz1 ul li {
  float: left;
  margin: 0 25px;
  }

nav#horz1 ul li a {  
  display: block;
  background-color: rgb(7, 83, 159);
  color: #fff;
  font-weight:bold;
  text-decoration: none;
  text-align: center;
  width: 100px;
  padding: 10px 0px 8px 0px;
  border-radius: 4px;
  font-size: 15px;
  }

nav#horz1 ul li a:hover {  
  background-color: rgb(208, 226, 245);
  border-radius: 15px;
  text-transform: uppercase;
  text-decoration: underline;
  color: #000;
  }

#header {
  font-size: 3em;
  font-weight:bold;
  }
  
.pinfo {
  color: rgb(7, 83, 159);
  font-size: 2em;
  font-weight:bold;
  }
  
.info ul {
  list-style-type: none;
  padding: 0;
  margin: 0;
  overflow: hidden
  }
  
.info ul li {
  margin: 0 25px;
  }
  
.info ul li a {
  color: #fff;
  font-weight:bold;
  text-decoration: none;
  }

  
ul.special_bullet li:before {
  color: rgb(7, 83, 159);
  content: "\27bd \0020";
  }
  
.main {
  width: 50%;
  margin: 5% 5%;
  float: left;
  }
  
.extras {
  width: 40%;
  float: right;
  margin: 5% 0% 5% 0%;
  }
  
.style {
  width:60%;
  height: 3px;
  text-align:left;
  margin-left:0;
  margin: 5% 0% 5% 0%;
  background-color: rgb(7, 83, 159);
  }
  
#style-long {
  width:500%;
  height: 3px;
  text-align:right;
  margin-left:0;
  background-color: rgb(7, 83, 159);
  }

#footer {
  clear: left;
  margin-top: 1em;
  margin-bottom: 1em;
  }
  
.links {
  float: left;
  width: 22.5%;
  margin: 0 0 0 2.5%;
  outline: 2px dashed #dd0009;
  }
  
  
.header {
  text-align:center;
  font-size: 2em;
  color: #000;
  padding: 10px 20px;
  }
    
.travel_food {
  text-align:center;
  }  
  
.container {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%,-50%);
  width: 600px;
  padding: 30px;
  background: #fff;
  box-sizing: border-box;
  border-radius: 10px;
  box-shadow: 0 15px 50px rgba(0,0,0,.2);
  }

.circle {
  position: relative;
  overflow: hidden;
  }
  
.circle img {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
  }  

.circle.circle1 {
  width: 400px;
  height: 400px;
  float: left;
  border-radius: 50%;
  margin: 50px;
  left: 20px;
  }

.bold_text {
    font-weight:bold;
}

.circle.circle2 {
  width: 400px;
  height: 400px;
  float: right;
  border-radius: 50%;
  margin: 50px; 
  right: 30px;
  }

.line {
  width:60%; 
  height: 3px; 
  text-align:left; 
  margin-left:0; 
  background-color: rgb(7, 83, 159);
}
  
.column {
  float: left;
  width: 33.33%;
  padding: 5px;
  }

.row::after {
  content: "";
  clear: both;
  display: table;
  }
  
.section {
  position: relative;
  width: 100%;
  padding: 50px
  }
  
.section h1 {
  color: #fff;
  font-size: 2em;
  margin-bottom: 20px;
  }
  
.section p {
  color: #fff;
  line-height: 1.5em;
  text-align: justify;
  }  
    
.image {
  position: relative;	
  overflow: hidden;
  }
  
.image.image1 {
  width: 500px;
  height: 500px;
  float: left;
  border-radius: 50%;
  margin: 20px
  }

#center {
  text-align: center;
  }

.wrapper {
  width: 850px;
  height: 600px;
  background-color: rgb(7, 83, 159);  
  margin: 0px auto;
  overflow: hidden;
  } 
  
.wrapper_bx {
  width 1000px
  margin: 40px auto;
  text-align: center;
  }

.bx-wrapper {
  left: 0;
  box-shadow: none;
  border: none;
  }

.footer {
  position: fixed;
  left: 0;
  bottom: 0;
  width: 100%;
  text-align: center;
  font-size: 45px;
  font-family: San Serif;
}
  
.slides li{
  height: 100vh;
  width: 800vh:
  -webkit-background-size: cover;
  background-size: cover;
  background-position: center center;
  text-align: center;

  }

.slides li h2{
  position: absolute;
  top: 35%;
  left: 50%;
  transform: translate(-50%, -35%);
  font-family: San Serif;
  font-size: 45px;
  margin: 0;
  padding: 0;
  text-align: bottom;
  }
  
  
#canvas {
  width: 700px;
  height: 500px;  
  margin: 30px auto; 
  }
  
#map {
  height: 75%;
  }
  

